@@ -3,7 +3,7 @@ ACLOCAL_AMFLAGS  = -I build-aux
 
 bin_PROGRAMS  = pt_render pt_asc2baudot pt_marquee
 bin_PROGRAMS += pt_and pt_or pt_invert pt_xor pt_random
-bin_PROGRAMS += pt_tape2txt 
+bin_PROGRAMS += pt_tape2txt pt_setmsb
 
 pt_render_SOURCES  = pt_render.cc pbmtape.cc papertape.h
 
@@ -22,6 +22,8 @@ pt_xor_SOURCES = pt_xor.cc papertape.h
 pt_random_SOURCES = pt_random.cc papertape.h
 
 pt_tape2txt_SOURCES = pt_tape2txt.cc papertape.h
+
+pt_setmsb_SOURCES = pt_setmsb.cc papertape.h
 
 EXTRA_DIST = ECMA-10.pdf
 
