@@ -2,6 +2,7 @@
 	Added pt_tape2txt utility to convert text source code tapes to
 	plain text by ignoring NUL bytes (i.e., tape leader) and clearing
 	the most significant bit.
+	Added pt_setmsb to set most significant bit of non-NUL bytes.
 
 1.0:
 	First release of papertape suite.
